// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`whook-cli should exit when erroring 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "commandHandler",
    ],
    Array [
      "commandHandler",
    ],
  ],
  "cwdCalls": Array [
    Array [],
  ],
  "errorCalls": Array [
    Array [
      "💀 - Cannot launch the process:",
    ],
  ],
  "exitCalls": Array [
    Array [
      1,
    ],
  ],
  "logCalls": Array [],
}
`;

exports[`whook-cli should run commands 1`] = `
Object {
  "autoloaderCalls": Array [
    Array [
      "commandHandler",
    ],
  ],
  "cwdCalls": Array [
    Array [],
  ],
  "exitCalls": Array [
    Array [],
  ],
  "logCalls": Array [
    Array [
      "debug",
      "Environment initialized 🚀🌕",
    ],
    Array [
      "warning",
      "Command ran!",
    ],
  ],
}
`;
